little refactoring here and there (readable code is better)
git-svn-id: svn://localhost/jahia/branches/JAHIA-6-0-BRANCH@1285 69c369ed-ed09-0410-a4a1-e19a46c23626