@@ -76,8 +76,7 @@ public abstract class FieldsEditHelperAbstract implements FieldsEditHelper {
 
     private static final Logger logger = Logger.getLogger(FieldsEditHelperAbstract.class);
 
-    public static final String FIELDS_EDIT_HELPER_CONTEXTID =
-            "org.jahia.data.fields.FieldsEditHelper.ContextID";
+    public static final String FIELDS_EDIT_HELPER_CONTEXTID = "org.jahia.data.fields.FieldsEditHelper.ContextID";
 
     private int selectedFieldId; // selected fieldId
     private int lastFieldId;
@@ -131,10 +130,9 @@ public abstract class FieldsEditHelperAbstract implements FieldsEditHelper {
         if (languageCode == null) {
             return false;
         }
-        List<String> langs = this.getUpdatedFields().get(new Integer(fieldId));
+        List<String> langs = this.getUpdatedFields().get(Integer.valueOf(fieldId));
         if (langs != null) {
-            return (languageCode.equals(ContentField.SHARED_LANGUAGE)
-                    || langs.contains(languageCode));
+            return (languageCode.equals(ContentField.SHARED_LANGUAGE) || langs.contains(languageCode));
         }
         return false;
     }
@@ -187,19 +185,17 @@ public abstract class FieldsEditHelperAbstract implements FieldsEditHelper {
 
     public void processRequest(ProcessingContext jParams, int lastFieldId) {
         String fieldIdStr = jParams.getParameter("lastfid");
-        int fieldId = 0;
+        int fieldId ;
         try {
             fieldId = Integer.parseInt(fieldIdStr);
             this.setLastFieldId(fieldId);
-        } catch (NumberFormatException nfe) {
-        }
+        } catch (NumberFormatException nfe) {}
 
         fieldIdStr = jParams.getParameter("editfid");
         try {
             fieldId = Integer.parseInt(fieldIdStr);
             this.setSelectedFieldId(fieldId);
-        } catch (NumberFormatException nfe) {
-        }
+        } catch (NumberFormatException nfe) {}
         if (lastFieldId != 0) {
             this.setSelectedFieldId(lastFieldId);
         }
@@ -217,20 +213,13 @@ public abstract class FieldsEditHelperAbstract implements FieldsEditHelper {
      * @return boolean
      * @throws JahiaException
      */
-    public boolean processLastFields(String engineName,
-                                     ContainerFacadeInterface jahiaContentContainerFacade,
-                                     EngineLanguageHelper elh,
-                                     ProcessingContext jParams,
-                                     Map<String, Object> engineMap,
-                                     int mode)
-            throws JahiaException {
+    public boolean processLastFields(String engineName, ContainerFacadeInterface jahiaContentContainerFacade,
+                                     EngineLanguageHelper elh, ProcessingContext jParams, Map<String, Object> engineMap, int mode) throws JahiaException {
 
         engineMap.put("fieldsEditCallingEngineName", engineName); // @todo : make as Constant
-        engineMap.put(JahiaEngine.PROCESSING_LOCALE,
-                elh.getPreviousLocale());
+        engineMap.put(JahiaEngine.PROCESSING_LOCALE, elh.getPreviousLocale());
 
-        JahiaContainer theContainer = jahiaContentContainerFacade.getContainer(
-                elh.getPreviousEntryLoadRequest(), true);
+        JahiaContainer theContainer = jahiaContentContainerFacade.getContainer(elh.getPreviousEntryLoadRequest(), true);
 
         engineMap.put(engineName + "." + "theContainer", theContainer);
 
@@ -250,16 +239,15 @@ public abstract class FieldsEditHelperAbstract implements FieldsEditHelper {
             return false;
         }
 
-        ContainerEditViewFieldGroup fieldGroup = getContainerEditView()
-                .getFieldGroupByFieldName(theField.getDefinition().getName());
+        ContainerEditViewFieldGroup fieldGroup = getContainerEditView().getFieldGroupByFieldName(theField.getDefinition().getName());
 
         boolean errorOccured = false;
 
         // get the lists of fields in the edit view
         int size = fieldGroup.getFieldNames().size();
-        String fieldName = "";
+        String fieldName ;
         for (int i = 0; i < size; i++) {
-            fieldName = (String) fieldGroup.getFieldNames().get(i);
+            fieldName = fieldGroup.getFieldNames().get(i);
 
             // dispatches to the appropriate sub engine
             theField = theContainer.getField(fieldName);
@@ -267,8 +255,7 @@ public abstract class FieldsEditHelperAbstract implements FieldsEditHelper {
 
                 int fieldType = theField.getType();
 
-                logger.debug("Update container field " +
-                        theField.getDefinition().getName() + "...");
+                logger.debug("Update container field " + theField.getDefinition().getName() + "...");
                 engineMap.put(engineName + "." + "theField", theField);
                 engineMap.put(engineName + "." + "isSelectedField", Boolean.FALSE);
 
@@ -278,23 +265,18 @@ public abstract class FieldsEditHelperAbstract implements FieldsEditHelper {
                 if (theContainer.getListID() != 0 && ctnListFieldAcls != null && fieldId > 0) {
                     JahiaBaseACL acl = JahiaEngineTools.getCtnListFieldACL(ctnListFieldAcls, fieldId);
                     if (acl != null) {
-                        doUpdate = acl.getPermission(jParams.getUser(),
-                                JahiaBaseACL.WRITE_RIGHTS, JahiaEngineTools.isCtnListFieldACLDefined(ctnListFieldAcls, fieldId));
+                        doUpdate = acl.getPermission(jParams.getUser(), JahiaBaseACL.WRITE_RIGHTS, JahiaEngineTools.isCtnListFieldACLDefined(ctnListFieldAcls, fieldId));
                     }
                 } else {
                     doUpdate = true;
                 }
-                EntryLoadRequest savedEntryLoadRequest =
-                        jParams.getSubstituteEntryLoadRequest();
+                EntryLoadRequest savedEntryLoadRequest = jParams.getSubstituteEntryLoadRequest();
                 jParams.setSubstituteEntryLoadRequest(elh.getPreviousEntryLoadRequest());
                 engineMap.put("fieldsEditCallingEngineName", engineName); // todo : make as Constant
-                if (doUpdate &&
-                        !EngineToolBox.getInstance().processFieldTypes(theField, theContainer, engineName, jParams, mode, engineMap)) {
-
+                if (doUpdate && !EngineToolBox.getInstance().processFieldTypes(theField, theContainer, engineName, jParams, mode, engineMap)) {
                     if (!errorOccured) {
                         errorOccured = true;
                     }
-
                     /*
                     // if there was an error, come back to last screen
                     engineMap.put ("screen", lastScreen);
@@ -308,24 +290,18 @@ public abstract class FieldsEditHelperAbstract implements FieldsEditHelper {
                     this.addUpdatedField(fieldId, theField.getLanguageCode());
                     if (fieldType != theField.getType()) {
                         // field type has changed
-                        jahiaContentContainerFacade.changeType(fieldId,
-                                theField.getType(), jParams);
-                        theField = jahiaContentContainerFacade.
-                                getContentFieldFacade(fieldId).
-                                getField(elh.getPreviousEntryLoadRequest(), true);
+                        jahiaContentContainerFacade.changeType(fieldId, theField.getType(), jParams);
+                        theField = jahiaContentContainerFacade.getContentFieldFacade(fieldId).getField(elh.getPreviousEntryLoadRequest(), true);
                         theContainer.setField(theField);
                         engineMap.put(engineName + "." + "theField", theField);
                     }
 
                     if (doUpdate && "true".equals(jParams.getParameter("apply_change_to_all_lang_" + fieldId))) {
-                        applyChangeToAllLang(engineName, theField,
-                                jahiaContentContainerFacade,
-                                engineMap, jParams);
+                        applyChangeToAllLang(engineName, theField, jahiaContentContainerFacade, engineMap, jParams);
                     }
                 }
                 jParams.setSubstituteEntryLoadRequest(savedEntryLoadRequest);
-                logger.debug("processLastScreen > the field value is now " +
-                        theField.getValue());
+                logger.debug("processLastScreen > the field value is now " + theField.getValue());
             }
         }
         if (errorOccured) {
@@ -348,24 +324,14 @@ public abstract class FieldsEditHelperAbstract implements FieldsEditHelper {
      * @return boolean
      * @throws JahiaException
      */
-    public boolean processCurrentFields(String engineName,
-                                        ContainerFacadeInterface jahiaContentContainerFacade,
-                                        EngineLanguageHelper elh,
-                                        ProcessingContext jParams, Map<String, Object> engineMap, int mode)
-            throws JahiaException {
+    public boolean processCurrentFields(String engineName, ContainerFacadeInterface jahiaContentContainerFacade, EngineLanguageHelper elh,
+                                        ProcessingContext jParams, Map<String, Object> engineMap, int mode) throws JahiaException {
 
         engineMap.put("fieldsEditCallingEngineName", engineName); // @todo : make as Constant
-
-        JahiaContainer theContainer = jahiaContentContainerFacade.getContainer(
-                elh.getCurrentEntryLoadRequest(), true);
-
+        JahiaContainer theContainer = jahiaContentContainerFacade.getContainer(elh.getCurrentEntryLoadRequest(), true);
         engineMap.put(engineName + "." + "theContainer", theContainer);
-
-        engineMap.put(JahiaEngine.PROCESSING_LOCALE,
-                elh.getCurrentLocale());
-
+        engineMap.put(JahiaEngine.PROCESSING_LOCALE, elh.getCurrentLocale());
         ContainerEditView editView = this.getContainerEditView();
-
         ContainerEditViewFieldGroup fieldGroup = null;
 
         // get first visible field
@@ -378,17 +344,15 @@ public abstract class FieldsEditHelperAbstract implements FieldsEditHelper {
             }
         }
         if (theField != null) {
-            fieldGroup = editView.getFieldGroupByFieldName(theField.
-                    getDefinition().getName());
+            fieldGroup = editView.getFieldGroupByFieldName(theField.getDefinition().getName());
         }
         if (fieldGroup == null) {
             if (editView.getFields().size() > 0) {
-                String fieldName = (String) editView.getFields().get(0);
+                String fieldName = editView.getFields().get(0);
                 theField = theContainer.getFieldByName(fieldName);
             }
             if (theField != null) {
-                fieldGroup = editView.getFieldGroupByFieldName(theField.
-                        getDefinition().getName());
+                fieldGroup = editView.getFieldGroupByFieldName(theField.getDefinition().getName());
                 this.setSelectedFieldId(theField.getID());
                 this.setLastFieldId(theField.getID());
             }
@@ -403,11 +367,11 @@ public abstract class FieldsEditHelperAbstract implements FieldsEditHelper {
 
             // get the lists of fields in the edit view
             int size = fieldGroup.getFieldNames().size();
-            String fieldName = "";
-            EntryLoadRequest processingEntryLoadRequest = null;
+            String fieldName ;
+            EntryLoadRequest processingEntryLoadRequest ;
 
             for (int i = 0; i < size; i++) {
-                fieldName = (String) fieldGroup.getFieldNames().get(i);
+                fieldName = fieldGroup.getFieldNames().get(i);
 
                 // dispatches to the appropriate sub engine
                 theField = theContainer.getField(fieldName);
@@ -417,43 +381,29 @@ public abstract class FieldsEditHelperAbstract implements FieldsEditHelper {
                     logger.debug("The field value is now " + theField.getValue());
 
                     engineMap.put(engineName + "." + "theField", theField);
-                    engineMap.put(engineName + "." + "isSelectedField",
-                            Boolean.valueOf(theField.getID() == this.getSelectedFieldId()));
+                    engineMap.put(engineName + "." + "isSelectedField", Boolean.valueOf(theField.getID() == this.getSelectedFieldId()));
                     engineMap.put(engineName + "." + "fieldID", new Integer(theField.getID()));
 
-                    processingEntryLoadRequest = new EntryLoadRequest(theField.
-                            getWorkflowState(), theField.getVersionID(),
-                            new ArrayList<Locale>());
-                    processingEntryLoadRequest.getLocales()
-                            .add(LanguageCodeConverters
-                                    .languageCodeToLocale(theField.getLanguageCode()));
+                    processingEntryLoadRequest = new EntryLoadRequest(theField.getWorkflowState(), theField.getVersionID(), new ArrayList<Locale>());
+                    processingEntryLoadRequest.getLocales().add(LanguageCodeConverters.languageCodeToLocale(theField.getLanguageCode()));
                     if (ContentObject.SHARED_LANGUAGE.equals(theField.getLanguageCode())) {
                         // allow engine locale too as the field is shared lang
-                        processingEntryLoadRequest.getLocales()
-                                .add(elh.getCurrentLocale());
+                        processingEntryLoadRequest.getLocales().add(elh.getCurrentLocale());
                     }
-                    EntryLoadRequest savedEntryLoadRequest =
-                            jParams.getSubstituteEntryLoadRequest();
-                    jParams.setSubstituteEntryLoadRequest(
-                            processingEntryLoadRequest);
+                    EntryLoadRequest savedEntryLoadRequest = jParams.getSubstituteEntryLoadRequest();
+                    jParams.setSubstituteEntryLoadRequest(processingEntryLoadRequest);
                     if (EngineToolBox.getInstance().processFieldTypes(theField, theContainer, engineName, jParams, mode, engineMap)) {
-
-                        if ("true".equals(jParams.getParameter(
-                                "apply_change_to_all_lang_" + theField.getID()))) {
-                            applyChangeToAllLang(engineName, theField,
-                                    jahiaContentContainerFacade,
-                                    engineMap, jParams);
+                        if ("true".equals(jParams.getParameter("apply_change_to_all_lang_" + theField.getID()))) {
+                            applyChangeToAllLang(engineName, theField, jahiaContentContainerFacade, engineMap, jParams);
                         }
                     }
                     jParams.setSubstituteEntryLoadRequest(savedEntryLoadRequest);
 
                     if (engineMap.get(engineName + "." + "fieldForm") != null) {
                         fieldIDs.add(new Integer(theField.getID()));
-                        Map<Integer, Object> fieldForms = (Map<Integer, Object>) engineMap.get(
-                                engineName + "." + "fieldForms");
+                        Map<Integer, Object> fieldForms = (Map<Integer, Object>) engineMap.get(engineName + "." + "fieldForms");
                         Object fieldForm = engineMap.get(engineName + "." + "fieldForm");
-                        fieldForms.put(new Integer(theField.getID()),
-                                fieldForm);
+                        fieldForms.put(new Integer(theField.getID()), fieldForm);
                     }
                 }
             }
@@ -475,19 +425,15 @@ public abstract class FieldsEditHelperAbstract implements FieldsEditHelper {
      * @return EngineValidationHelper
      * @throws JahiaException
      */
-    public EngineValidationHelper validate(String engineName,
-                                           ContainerFacadeInterface jahiaContentContainerFacade,
-                                           EngineLanguageHelper elh,
-                                           ProcessingContext jParams,
-                                           Map<String, Object> engineMap)
-            throws JahiaException {
+    public EngineValidationHelper validate(String engineName,ContainerFacadeInterface jahiaContentContainerFacade,EngineLanguageHelper elh,
+                                           ProcessingContext jParams, Map<String, Object> engineMap) throws JahiaException {
         final EngineValidationHelper evh = new EngineValidationHelper();
         final Iterator<JahiaContentFieldFacade> fieldEnum = jahiaContentContainerFacade.getFields();
         while (fieldEnum.hasNext()) {
-            final JahiaContentFieldFacade cff = (JahiaContentFieldFacade) fieldEnum.next();
+            final JahiaContentFieldFacade cff = fieldEnum.next();
             final Iterator<JahiaField> fEnum = cff.getFields();
             while (fEnum.hasNext()) {
-                final JahiaField field = (JahiaField) fEnum.next();
+                final JahiaField field = fEnum.next();
                 if (!field.getDefinition().getItemDefinition().isProtected()) {
                     if (this.getContainerEditView().getFieldGroupByFieldName(field.getDefinition().getName()) != null) {
                         if (getEditedLanguages().contains(field.getLanguageCode())) {
@@ -502,74 +448,72 @@ public abstract class FieldsEditHelperAbstract implements FieldsEditHelper {
                 String nodeTypeName = field.getDefinition().getItemDefinition().getDeclaringNodeType().getName(); 
                 String propDef = field.getDefinition().getItemDefinition().getName();
                 if (nodeTypeName != null && nodeTypeName.length() > 0 && propDef != null && propDef.length() > 0) {
-                    ExtendedNodeType nt = null;
+                    ExtendedNodeType nt ;
                     try {
                         nt = NodeTypeRegistry.getInstance().getNodeType(nodeTypeName);
-                    ExtendedPropertyDefinition pd = nt.getPropertyDefinition(propDef);
-                    if (pd != null) {
-                        Value[] vcs = pd.getValueConstraintsAsValue();
-                        if (vcs.length > 0) {
-                            String v = field.getValue();
-                            if (field.getType() == FieldTypes.DATE) {
-                                v = (String) field.getObject();
-                            }
-                            List<String> values;
-                            if (pd.isMultiple()) {
-                                values = Arrays.asList(v.split("\\$\\$\\$"));
-                            } else {
-                                values = Collections.singletonList(v);
-                            }
-                            for (String value : values) {
-                                boolean nok = true;
-                                for (int i = 0; i < vcs.length; i++) {
-                                    Value vc = vcs[i];
-                                    try {
-                                        if (vc instanceof DynamicValueImpl) {
-                                            Value[] vcs2 = ((DynamicValueImpl) vc).expand();
-                                            for (int j = 0; j < vcs2.length; j++) {
-                                                if (((ValueImpl) vcs2[j]).checkConstraint(value)) {
+                        ExtendedPropertyDefinition pd = nt.getPropertyDefinition(propDef);
+                        if (pd != null) {
+                            Value[] vcs = pd.getValueConstraintsAsValue();
+                            if (vcs.length > 0) {
+                                String v = field.getValue();
+                                if (field.getType() == FieldTypes.DATE) {
+                                    v = (String) field.getObject();
+                                }
+                                List<String> values;
+                                if (pd.isMultiple()) {
+                                    values = Arrays.asList(v.split("\\$\\$\\$"));
+                                } else {
+                                    values = Collections.singletonList(v);
+                                }
+                                for (String value : values) {
+                                    boolean nok = true;
+                                    for (int i = 0; i < vcs.length; i++) {
+                                        Value vc = vcs[i];
+                                        try {
+                                            if (vc instanceof DynamicValueImpl) {
+                                                Value[] vcs2 = ((DynamicValueImpl) vc).expand();
+                                                for (int j = 0; j < vcs2.length; j++) {
+                                                    if (((ValueImpl) vcs2[j]).checkConstraint(value)) {
+                                                        nok = false;
+                                                        break;
+                                                    }
+                                                }
+                                            } else {
+                                                if (((ValueImpl) vc).checkConstraint(value)) {
                                                     nok = false;
                                                     break;
                                                 }
                                             }
-                                        } else {
-                                            if (((ValueImpl) vc).checkConstraint(value)) {
-                                                nok = false;
-                                                break;
+                                        } catch (RepositoryException e) {
+                                            logger.error("Cannot evaluate constraint", e);
+                                        }
+                                    }
+                                    if (nok) {
+                                        String[] constraints ;
+                                        try {
+                                            constraints = new String[vcs.length];
+                                            for (int i = 0; i < vcs.length; i++) {
+                                                constraints[i] = vcs[i].getString();
                                             }
+                                        } catch (RepositoryException e) {
+                                            logger.warn(e.getMessage(), e);
+                                            constraints = null;
                                         }
-                                    } catch (RepositoryException e) {
-                                        logger.error("Cannot evaluate constraint", e);
+                                        ValidationError error = new ValidationError(field, constraints != null ? "Value does not match constraint (any of the constraints): "
+                                                + StringUtils.join(constraints,", "): "Value does not match constraint", pd.getResourceBundleKey()
+                                                + ".invalidConstraint", constraints != null ? constraints : ArrayUtils.EMPTY_STRING_ARRAY);
+                                        error.setLanguageCode(field.getLanguageCode());
+                                        evh.addError(error);
                                     }
-                                }
-                                if (nok) {
-                                    String[] constraints = null;
-                                    try {
-                                        constraints = new String[vcs.length];
-                                        for (int i = 0; i < vcs.length; i++) {
-                                            constraints[i] = vcs[i].getString();
-                                        }
-                                    } catch (RepositoryException e) {
-                                        logger.warn(e.getMessage(), e);
-                                        constraints = null;
-                                    }
-                                    ValidationError error = new ValidationError(field,
-                                            constraints != null ? "Value does not match constraint (any of the constraints): "+ StringUtils.join(constraints,", "): "Value does not match constraint",
-                                            pd.getResourceBundleKey() + ".invalidConstraint", constraints != null ? constraints : ArrayUtils.EMPTY_STRING_ARRAY);
-                                    error.setLanguageCode(field.getLanguageCode());
-                                    evh.addError(error);
                                 }
                             }
                         }
+                    } catch (NoSuchNodeTypeException e) {
+                        logger.error("No such nodetype",e);
                     }
-                } catch (NoSuchNodeTypeException e) {
-                    logger.error("No such nodetype",e);
                 }
-                }
-
             }
         }
-
         return evh;
     }
 
@@ -578,25 +522,18 @@ public abstract class FieldsEditHelperAbstract implements FieldsEditHelper {
      * @param jahiaContentContainerFacade
      * @throws JahiaException todo : put in a Tool class
      */
-    public void applyChangeToAllLang(String engineName,
-                                     JahiaField theField,
-                                     ContainerFacadeInterface jahiaContentContainerFacade,
-                                     Map<String, Object> engineMap,
-                                     ProcessingContext jParams)
-            throws JahiaException {
+    public void applyChangeToAllLang(String engineName, JahiaField theField, ContainerFacadeInterface jahiaContentContainerFacade, Map<String, Object> engineMap, ProcessingContext jParams) throws JahiaException {
         final JahiaContentFieldFacade contentFieldFacade = jahiaContentContainerFacade.getContentFieldFacade(theField.getID());
         final Iterator<JahiaField> fieldEnum = contentFieldFacade.getFields();
         while (fieldEnum.hasNext()) {
-            final JahiaField field = (JahiaField) fieldEnum.next();
+            final JahiaField field = fieldEnum.next();
             theField.copyValueInAnotherLanguage(field, jParams);
             // remember change
             this.addUpdatedField(field.getID(), field.getLanguageCode());
         }
     }
 
-    public boolean areValuesTheSameInAllActiveLanguages(final JahiaField theField,
-                                                        final ContainerFacadeInterface jahiaContentContainerFacade)
-            throws JahiaException {
+    public boolean areValuesTheSameInAllActiveLanguages(final JahiaField theField, final ContainerFacadeInterface jahiaContentContainerFacade) throws JahiaException {
         final JahiaContentFieldFacade contentFieldFacade = jahiaContentContainerFacade.getContentFieldFacade(theField.getID());
         if (contentFieldFacade == null) return false;
         final Iterator<JahiaField> fieldEnum = contentFieldFacade.getFields();
@@ -607,7 +544,9 @@ public abstract class FieldsEditHelperAbstract implements FieldsEditHelper {
             theFieldValue = StringUtils.replace(theFieldValue, "\n", "");
             theFieldValue = theFieldValue.trim();
         }
-        if (theFieldValue == null || theFieldValue.length() == 0 || theFieldValue.startsWith("<jahia")) return false;
+        if (theFieldValue == null || theFieldValue.length() == 0 || theFieldValue.startsWith("<jahia")) {
+            return false;
+        }
         while (fieldEnum.hasNext()) {
             final JahiaField field = fieldEnum.next();
             String value = field.getValue();
