@@ -67,18 +67,17 @@ public class EngineToolBox {
     private static final String JSP_FLUSHCONFIRM = "/engines/audit/flushconfirm.jsp";
 
     /** Logger instance */
-    private static final org.apache.log4j.Logger logger =
-            org.apache.log4j.Logger.getLogger (EngineToolBox.class);
+    private static final org.apache.log4j.Logger logger = org.apache.log4j.Logger.getLogger (EngineToolBox.class);
 
 
-    private EngineToolBox () {
+    private EngineToolBox() {
     }
 
 
     /**
      * returns a single instance of the object
      */
-    public static EngineToolBox getInstance () {
+    public static EngineToolBox getInstance() {
         return instance;
     }
 
@@ -86,8 +85,8 @@ public class EngineToolBox {
     /**
      * authoriseRender
      */
-    public boolean authoriseRender (final ProcessingContext jParams) {
-        return jParams.getOperationMode ().equals(ProcessingContext.EDIT);
+    public boolean authoriseRender(final ProcessingContext jParams) {
+        return jParams.getOperationMode().equals(ProcessingContext.EDIT);
     } // end authoriseRender
 
 
@@ -104,68 +103,47 @@ public class EngineToolBox {
      * @throws JahiaException
      * @return boolean
      */
-    public boolean processFieldTypes (final JahiaField theField,
-                                      final JahiaContainer theContainer,
-                                      final String engineName,
-                                      final ProcessingContext jParams,
-                                      final int mode,
-                                      final Map<String, Object> engineMap)
-            throws JahiaException {
+    public boolean processFieldTypes(final JahiaField theField, final JahiaContainer theContainer, final String engineName,
+                                     final ProcessingContext jParams, final int mode, final Map<String, Object> engineMap) throws JahiaException {
         boolean out;
 
-        engineMap.put("fieldsEditCallingEngineName",engineName);
-        engineMap.put(engineName+"."+"theContainer",theContainer);
-        engineMap.put(engineName+"."+"theField",theField);
-        engineMap.put("theField",theField);
+        engineMap.put("fieldsEditCallingEngineName", engineName);
+        engineMap.put(engineName + "." + "theContainer", theContainer);
+        engineMap.put(engineName + "." + "theField", theField);
+        engineMap.put("theField", theField);
 
-        int fieldType = theField.getDefinition ().getType ();
+        int fieldType = theField.getDefinition().getType();
         if (logger.isDebugEnabled()) {
             logger.debug(" field type is " + fieldType);
         }
         if (fieldType <= 0) {
-            fieldType = theField.getType ();
+            fieldType = theField.getType();
         }
         // get the engine className
 
-        final String fieldEngineName = theField.getEngineName ();
+        final String fieldEngineName = theField.getEngineName();
 
         try {
             final Class<?> theParams[] = null;
-            final Method thisMethod = Class.forName(fieldEngineName)
-                    .getDeclaredMethod("getInstance", theParams);
+            final Method thisMethod = Class.forName(fieldEngineName).getDeclaredMethod("getInstance", theParams);
             final Object args[] = null;
 
-            final FieldSubEngine engine = (FieldSubEngine) thisMethod.invoke(
-                    null, args);
+            final FieldSubEngine engine = (FieldSubEngine) thisMethod.invoke(null, args);
 
-            out = engine.handleField(jParams, new Integer(mode), engineMap);
+            out = engine.handleField(jParams, Integer.valueOf(mode), engineMap);
 
             if (logger.isDebugEnabled()) {
-                logger.debug("Editing "
-                        + fieldEngineName.substring(fieldEngineName
-                                .lastIndexOf(".")) + " !");
+                logger.debug("Editing " + fieldEngineName.substring(fieldEngineName.lastIndexOf(".")) + " !");
             }
 
         } catch (ClassNotFoundException cnfe) {
-            throw new JahiaException("EngineToolBox:processFieldTypes",
-                    "Class not found!", JahiaException.PAGE_ERROR,
-                    JahiaException.CRITICAL_SEVERITY, cnfe);
-
+            throw new JahiaException("EngineToolBox:processFieldTypes", "Class not found!", JahiaException.PAGE_ERROR, JahiaException.CRITICAL_SEVERITY, cnfe);
         } catch (NoSuchMethodException nsme) {
-            throw new JahiaException("EngineToolBox:processFieldTypes",
-                    "Method not found!", JahiaException.PAGE_ERROR,
-                    JahiaException.CRITICAL_SEVERITY, nsme);
-
+            throw new JahiaException("EngineToolBox:processFieldTypes", "Method not found!", JahiaException.PAGE_ERROR, JahiaException.CRITICAL_SEVERITY, nsme);
         } catch (IllegalAccessException iae) {
-            throw new JahiaException("EngineToolBox:processFieldTypes",
-                    "Illegal access", JahiaException.PAGE_ERROR,
-                    JahiaException.CRITICAL_SEVERITY, iae);
-
+            throw new JahiaException("EngineToolBox:processFieldTypes", "Illegal access", JahiaException.PAGE_ERROR, JahiaException.CRITICAL_SEVERITY, iae);
         } catch (InvocationTargetException ite) {
-
-            throw new JahiaException("EngineToolBox:processFieldTypes",
-                    "InvocationTarget exception", JahiaException.PAGE_ERROR,
-                    JahiaException.CRITICAL_SEVERITY, ite);
+            throw new JahiaException("EngineToolBox:processFieldTypes", "InvocationTarget exception", JahiaException.PAGE_ERROR, JahiaException.CRITICAL_SEVERITY, ite);
         }
 
 
@@ -175,8 +153,7 @@ public class EngineToolBox {
         /** todo is there a way to do this only when we really update a
          * field ? Maybe move this to a field.save() generic method.
          */
-        ServicesRegistry.getInstance().getJahiaFieldService().
-                invalidateCacheField(theField.getID());
+        ServicesRegistry.getInstance().getJahiaFieldService().invalidateCacheField(theField.getID());
         return out;
     } // end processFieldTypes
 
@@ -185,9 +162,8 @@ public class EngineToolBox {
      *
      * @param jParams a ProcessingContext object
      */
-    public void displayScreen (final ProcessingContext jParams, final Map<String, Object> engineMap)
-            throws JahiaException {
-        EngineRenderer.getInstance ().render (jParams, engineMap);
+    public void displayScreen(final ProcessingContext jParams, final Map<String, Object> engineMap) throws JahiaException {
+        EngineRenderer.getInstance().render(jParams, engineMap);
     } // end displayScreen
 
 
@@ -198,9 +174,7 @@ public class EngineToolBox {
      * @param objectType an <code>int</code> representing the type of the object processed
      * @param engineMap  then engine map, to be forwarded to the JSP file
      */
-    public void loadLogData (final ProcessingContext jParams, 
-            final int objectType, final Map<String, Object> engineMap)
-            throws JahiaException {
+    public void loadLogData(final ProcessingContext jParams, final int objectType, final Map<String, Object> engineMap) throws JahiaException {
 
         // set default values
         int flushLogs = 0;
@@ -210,34 +184,29 @@ public class EngineToolBox {
         // get parameters
         final String userAgent = jParams.getUserAgent();
         //boolean sendAsFile = (jParams.getRequest ().getParameter ("send") != null);
-        if (jParams.getParameter ("flush") != null) {
-            flushLogs = Integer.parseInt (jParams.getParameter ("flush"));
+        if (jParams.getParameter("flush") != null) {
+            flushLogs = Integer.parseInt(jParams.getParameter("flush"));
         }
-        final int objectID = JahiaObjectTool.getInstance ().getObjectID (objectType, engineMap);
-        final String objectName = JahiaObjectTool.getInstance ().getObjectName (objectType,
-                engineMap);
+        final int objectID = JahiaObjectTool.getInstance().getObjectID(objectType, engineMap);
+        final String objectName = JahiaObjectTool.getInstance().getObjectName(objectType, engineMap);
 
         // Try to get the Audit Log Manager Service
-        final ServicesRegistry registry = ServicesRegistry.getInstance ();
+        final ServicesRegistry registry = ServicesRegistry.getInstance();
         final JahiaAuditLogManagerService mAuditLogManager;
         if (registry != null) {
-            mAuditLogManager = registry.getJahiaAuditLogManagerService ();
+            mAuditLogManager = registry.getJahiaAuditLogManagerService();
             if (mAuditLogManager == null) {
-                throw new JahiaException (MSG_INTERNAL_ERROR, "Properties Engine could not get the Audit Log Manager Service instance.",
-                        JahiaException.SERVICE_ERROR, JahiaException.CRITICAL_SEVERITY);
+                throw new JahiaException(MSG_INTERNAL_ERROR, "Properties Engine could not get the Audit Log Manager Service instance.", JahiaException.SERVICE_ERROR, JahiaException.CRITICAL_SEVERITY);
             }
         } else {
-            throw new JahiaException (MSG_INTERNAL_ERROR, "Properties Engine could not get the Service Registry instance.",
-                    JahiaException.REGISTRY_ERROR, JahiaException.CRITICAL_SEVERITY);
+            throw new JahiaException(MSG_INTERNAL_ERROR, "Properties Engine could not get the Service Registry instance.", JahiaException.REGISTRY_ERROR, JahiaException.CRITICAL_SEVERITY);
         }
 
         // logs
-        engineMap.put ("flushLogs", new Integer (flushLogs));
-        engineMap.put ("sendLogsURL",
-                ManageLogs_Engine.getInstance ().renderLink (jParams, ""));
-        engineMap.put ("objectTypeName",
-                JahiaObjectTool.getInstance ().getObjectTypeName (objectType));
-        engineMap.put ("objectIDObj", new Integer (objectID));
+        engineMap.put("flushLogs", Integer.valueOf(flushLogs));
+        engineMap.put("sendLogsURL", ManageLogs_Engine.getInstance().renderLink(jParams, ""));
+        engineMap.put("objectTypeName", JahiaObjectTool.getInstance().getObjectTypeName(objectType));
+        engineMap.put ("objectIDObj", Integer.valueOf(objectID));
         engineMap.put ("objectName", objectName);
         engineMap.put ("userAgent", userAgent);
 
@@ -248,21 +217,17 @@ public class EngineToolBox {
         //                                                           and display clean log window
         switch (flushLogs) {
             case 1:
-                output = registry.getJahiaFetcherService ().fetchServlet ((ParamBean)jParams,
-                        JSP_FLUSHCONFIRM);
+                output = registry.getJahiaFetcherService().fetchServlet((ParamBean) jParams, JSP_FLUSHCONFIRM);
                 break;
-
             case 2:
-                deletedRows = mAuditLogManager.flushLogs (objectType, objectID, jParams);
-
+                deletedRows = mAuditLogManager.flushLogs(objectType, objectID, jParams);
             default:
-                final List logData = mAuditLogManager.getLog (objectType, objectID,
-                        jParams);
-                engineMap.put ("logData", logData);
-                engineMap.put ("deletedRows", new Integer (deletedRows));
-                output = registry.getJahiaFetcherService ().fetchServlet ((ParamBean)jParams, JSP_LOGFORM);
+                final List logData = mAuditLogManager.getLog(objectType, objectID, jParams);
+                engineMap.put("logData", logData);
+                engineMap.put("deletedRows", Integer.valueOf(deletedRows));
+                output = registry.getJahiaFetcherService().fetchServlet((ParamBean) jParams, JSP_LOGFORM);
         }
-        engineMap.put ("logForm", output);
+        engineMap.put("logForm", output);
 
     }
 
